force-app/main/default/objects/Favorite__c/Favorite__c.object-meta.xml
<CustomObject>
    <label>お気に入り情報</label>
    <nameField>
        <label>お気に入り名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>