force-app/main/default/objects/Favorite__c/fields/Auction_Data__c.field-meta.xml
<CustomField>
    <fullName>Auction_Data__c</fullName>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>お気に入り情報</relationshipLabel>
    <relationshipName>Auction_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>