force-app/main/default/objects/Favorite__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Member_infomation__r.country_cd__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>国</label>
    <type>Text</type>
</CustomField>