force-app/main/default/objects/Favorite__c/fields/Member_infomation__c.field-meta.xml
<CustomField>
    <fullName>Member_infomation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員名</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>お気に入り情報</relationshipLabel>
    <relationshipName>Member_infomation</relationshipName>
    <type>Lookup</type>
</CustomField>