force-app/main/default/objects/Favorite__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>Member_infomation__r.sale_tant_cd__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売担当者</label>
    <type>Text</type>
</CustomField>